tests/type-errors/no_pkey_assignment_in_addupdate.arl
archetype no_pkey_assignment_in_addupdate

asset myasset {
  id : string;
}

entry exec (k : string) {
  effect {
    myasset.addupdate(k, {id = "key"})
  }
}
